// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConnectionParams Creates correct params in production environment 1`] = `
Array [
  Object {
    "DBClusterIdentifier": "aurora-cluster-production-test",
    "Filters": Array [
      Object {
        "Name": "db-cluster-endpoint-type",
        "Values": Array [
          "writer",
        ],
      },
      Object {
        "Name": "db-cluster-endpoint-status",
        "Values": Array [
          "available",
        ],
      },
    ],
  },
]
`;

exports[`getConnectionParams Creates correct params in staging environment 1`] = `
Array [
  Object {
    "DBClusterIdentifier": "aurora-cluster-staging-test",
    "Filters": Array [
      Object {
        "Name": "db-cluster-endpoint-type",
        "Values": Array [
          "writer",
        ],
      },
      Object {
        "Name": "db-cluster-endpoint-status",
        "Values": Array [
          "available",
        ],
      },
    ],
  },
]
`;

exports[`getConnectionParams Fails if there is no writer endpoint available 1`] = `
Array [
  Object {
    "DBClusterIdentifier": "aurora-cluster-staging-test",
    "Filters": Array [
      Object {
        "Name": "db-cluster-endpoint-type",
        "Values": Array [
          "writer",
        ],
      },
      Object {
        "Name": "db-cluster-endpoint-status",
        "Values": Array [
          "available",
        ],
      },
    ],
  },
]
`;
